# jackminimix

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS.md  README  README.md  TODO  autogen.sh  bootstrap.sh  configure.ac  configure.in  minimix-remote.c  minimix.c
perl/: Build.PL  Changes  MANIFEST  README  jmm-remote.pl  jmm_lsc.pl
perl/lib/Audio/: JackMiniMix.pm
perl/t/: 00use.t
src/: Makefile.am  db.h  mini_mixer.c  mini_mixer_client.c  minimix.c
